removed a bunch of shit
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/truefriend/scss/commongood/_colors.scss
+++ b/app/themes/truefriend/scss/commongood/_colors.scss
@@ -1,14 +1,1 @@
-
-@include color-setup("green", $green);
-@include color-setup("green-dark", $green-dark);
-@include color-setup("blue", $blue);
-@include color-setup("steel", $steel);
-@include color-setup("white", $white);
-
-
-@include color-setup("grey-darker", $grey-darker);
-@include color-setup("grey-dark", $grey-dark);
-@include color-setup("grey-light", $grey-light);
-@include color-setup("grey-lighter", $grey-lighter);
-@include color-setup("grey-lightest", $grey-lightest);
-
+// @include color-setup("green", $green);
