--- a/app/themes/truefriend/scss/commongood/_footer.scss
+++ b/app/themes/truefriend/scss/commongood/_footer.scss
@@ -1,12 +1,7 @@
+/*------------------------------------*\
+    $FOOTER
+\*------------------------------------*/
+
 .footer {
-	background:$grey-darker;
-	overflow:hidden;
-	* {
-		color:$white;
-	}
-	a {
-		@extend .link--inverted;
-	}
 
-}   
-
+}
