--- a/app/themes/truefriend/scss/style.scss
+++ b/app/themes/truefriend/scss/style.scss
@@ -58,6 +58,7 @@ Version: 1.0
 @import "commongood/headings";
 @import "commongood/lists";
 @import "commongood/links";
+@import "commongood/fonts";
 @import "commongood/iconfont";
 @import "commongood/icons";
 @import "commongood/images";
