--- a/app/themes/truefriend/scss/commongood/_screen.scss
+++ b/app/themes/truefriend/scss/commongood/_screen.scss
@@ -1,7 +1,11 @@
 body {
+	font: 11px/1.3 "ConduitITCStdLight", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	margin:0 !important;
 	background:$white;
 	height:100%;
+	color:#0F0F46;
+	background:url(images/logo-sides.png) -25px center no-repeat #e1e1e2;
+	text-align:center;
 }
 
 html {
@@ -12,7 +16,5 @@ html {
 	width:100%;
 	max-width:$site-width;
 	margin:auto;
-	&.row--large {
-		max-width:$site-width + 100px;	
-	}
+	
 }
