--- a/app/themes/commongood/scss/style.scss
+++ b/app/themes/commongood/scss/style.scss
@@ -26,6 +26,7 @@ Version: 1.0
 @import "compass/css3";
 @import "vars";
 @import "../bower_components/inuit.css/inuit";
+@import "../bower_components/foundation/scss/foundation/components/flex-video";
 
 
 /**
