--- a/app/themes/commongood/scss/commongood/_animations.scss
+++ b/app/themes/commongood/scss/commongood/_animations.scss
@@ -1,33 +1,22 @@
 .ng-enter, 
 .ng-leave
 { 
-  -webkit-transition: 400ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
-  -moz-transition: 400ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
-  -ms-transition: 400ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
-  -o-transition: 400ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
-  transition: 400ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
+  @include transition(200ms ease-in all);
   position: relative;
   display: block;
-  overflow: hidden;
-  text-overflow: clip;
-  white-space:nowrap;
 } 
 
 .ng-leave {
-  left:0;
   opacity:1;
 }
 
 .ng-leave.ng-leave-active {
-  left:100%;
   opacity:0;
 }
 
 .ng-enter {
-  right:100%;
   opacity:0;
 }
 .ng-enter.ng-enter-active{
   opacity: 1;
-  right:0;
 }
