--- a/app/themes/commongood/scss/commongood/_footer.scss
+++ b/app/themes/commongood/scss/commongood/_footer.scss
@@ -5,3 +5,25 @@
 .footer {
 
 }
+
+/* Footer
+-----------------------------------------------------------------------------*/
+
+
+.site-title--small{
+	display:block;
+	height:7px;
+	width:54px;
+	float:right;
+	a {
+		background-image:url(../images/logo-s.png);
+		background-repeat:no-repeat;
+		height:7px;
+		width:54px;
+		text-indent:-9999px;
+		margin:0px;
+		display:block;
+		border:none;
+	}
+
+} 
