--- a/app/themes/commongood/scss/commongood/_headings.scss
+++ b/app/themes/commongood/scss/commongood/_headings.scss
@@ -4,12 +4,9 @@ $HEADINGS
 
 
 h1,.alpha{
-	font-size: 13px; /* Equivalent to 12pt */
 	font-family: 'ConduitITCStdBold', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	text-transform:uppercase;
-	font-size: 1.3em;
 	font-weight: normal;
-	margin-bottom: 15px;
 }
 
 h2,.beta{
@@ -28,17 +25,9 @@ h3,.gamma{
 }
 
 h4,.delta{
-	background:url(images/0F0F37-75.png);
-	color:#FFFFFF;
-	font-size: 11px;
-	bottom: 12px;
-	left: 8px;
-	padding:2px 7px;
-	position:absolute;
-	width:170px;
-	display:none;
+	display:block;
 	font-weight:normal;
-	font-family: 'ConduitITCStdMedium', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: $font-family-medium;
 	a {
 		color:#FFFFFF;
 	}
