--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -1,4 +1,4 @@
-<div class="flex-video">
+<div class="flex-video widescreen vimeo">
 	<iframe src="{{playerUrl}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	<p>{{video.title}}</p>
 	<p>{{video.tags}}</p>	
