--- a/app/themes/commongood/scss/style.scss
+++ b/app/themes/commongood/scss/style.scss
@@ -49,7 +49,7 @@ Version: 1.0
 /**
  * Theme Styles
  */
-
+@import "commongood/fonts";
 @import "commongood/colors";
 @import "commongood/logo";
 @import "commongood/screen";
