--- a/app/themes/commongood/scss/commongood/_header.scss
+++ b/app/themes/commongood/scss/commongood/_header.scss
@@ -1,12 +1,8 @@
-$site-header-height : 70px;
 
-.header {
-	height: $site-header-height;
-}
 .site-title {
 	position:absolute;
-	bottom:0;
-	left:0;
+	bottom:7px;
+	left:$half-spacing-unit;;
 	margin:0;
 	a {
 		background:url(../images/logo.png) no-repeat center center;
