--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -1,7 +1,15 @@
-<div class="flex-video widescreen vimeo">
-	<iframe src="{{playerUrl}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-	<p>{{video.title}}</p>
-	<p>{{video.tags}}</p>	
-	<p ng-bind-html="video.description"></p>
-
+<div class="video ">
+	<div class="flex-video widescreen vimeo video__player">
+		<iframe src="{{playerUrl}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	</div>
+	<ul class="multi-list soft-half--top two-cols video__meta">
+		<li>
+			<span class="gamma">{{video.title}}</span>
+		</li>
+		<li class="soft--left">
+			<span ng-show="{{ video.description }}" class="gamma soft-half--right">Description</span> 
+			<span ng-bind-html="video.description"></span>
+		</li>
+	</ul>
 </div>
+
