added video player
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/commongood/views/main.html
+++ b/app/themes/commongood/views/main.html
@@ -1,4 +1,4 @@
-<div class="row row--dashed">
+<div class="row">
 	<div class="grid">
 		<div ng-repeat="video in videos " class="palm-one-whole lap-one-third desk-one-quarter soft--bottom grid__item" ng-animate=" " >
 			<a class="work-block" href="/video/{{video.id}}">
