--- a/app/themes/commongood/views/main.html
+++ b/app/themes/commongood/views/main.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="grid">
-		<div ng-repeat="video in videos " class="palm-one-whole lap-one-third desk-one-quarter soft--bottom grid__item" ng-animate=" " >
+		<div ng-repeat="video in videos " class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item" ng-animate=" " >
 			<a class="work-block" href="/video/{{video.id}}">
 				<img ng-src="{{video.thumbnail_large}}" />
 				<h4 class="work-block__text">{{ video.title }}</h4>
