--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -1,14 +1,22 @@
-<div class="video ">
+<div class="video one-whole soft--bottom  grid__item " >
 	<div class="flex-video widescreen vimeo video__player">
 		<iframe src="{{playerUrl}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</div>
-	<ul class="multi-list soft-half--top two-cols video__meta">
+	<ul class="multi-list soft-half--top four-cols video__meta">
 		<li>
 			<span class="gamma">{{video.title}}</span>
 		</li>
 		<li class="soft--left">
-			<span ng-show="{{ video.description }}" class="gamma soft-half--right">Description</span> 
-			<span ng-bind-html="video.description"></span>
+			<span ng-show="{{ video.post_meta.agency }}" class="gamma soft-half--right">Agency</span> 
+			<span ng-bind-html="video.post_meta.agency"></span>
+		</li>
+		<li class="soft--left">
+			<span ng-show="{{ video.post_meta.director }}" class="gamma soft-half--right">Director</span> 
+			<span ng-bind-html="video.post_meta.director"></span>
+		</li>
+		<li class="soft--left">
+			<span ng-show="{{ video.post_meta.client }}" class="gamma soft-half--right">Client</span> 
+			<span ng-bind-html="video.post_meta.client"></span>
 		</li>
 	</ul>
 </div>
