--- a/app/themes/commongood/views/main.html
+++ b/app/themes/commongood/views/main.html
@@ -1,8 +1,8 @@
 <div class="row">
 	<div class="grid">
 		<div ng-repeat="video in videos " class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item" ng-animate=" " >
-			<a class="work-block" href="/video/{{video.id}}">
-				<img ng-src="{{video.thumbnail_large}}" />
+			<a class="work-block" href="/video/{{video.ID}}">
+				<img ng-src="{{video.featured_image.attachment_meta.sizes.medium.url}}" />
 				<h4 class="work-block__text">{{ video.title }}</h4>
 			</a>
 		</div>
