maybe fixed things
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -1,22 +1,22 @@
 <div class="video one-whole soft--bottom  grid__item " >
 	<div class="flex-video widescreen vimeo video__player">
-		<iframe src="{{playerUrl}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe src="{{player}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</div>
 	<ul class="multi-list soft-half--top four-cols video__meta">
 		<li>
-			<span class="gamma">{{video.title}}</span>
+			<span class="gamma" ng-bind-html="playing.title"></span>
 		</li>
 		<li class="soft--left">
-			<span ng-show="{{ video.post_meta.agency }}" class="gamma soft-half--right">Agency</span> 
-			<span ng-bind-html="video.post_meta.agency"></span>
+			<span ng-show="{{ playing.post_meta.agency }}" class="gamma soft-half--right">Agency</span> 
+			<span ng-bind-html="playing.post_meta.agency"></span>
 		</li>
 		<li class="soft--left">
-			<span ng-show="{{ video.post_meta.director }}" class="gamma soft-half--right">Director</span> 
-			<span ng-bind-html="video.post_meta.director"></span>
+			<span ng-show="{{ playing.post_meta.director }}" class="gamma soft-half--right">Director</span> 
+			<span ng-bind-html="playing.post_meta.director"></span>
 		</li>
 		<li class="soft--left">
-			<span ng-show="{{ video.post_meta.client }}" class="gamma soft-half--right">Client</span> 
-			<span ng-bind-html="video.post_meta.client"></span>
+			<span ng-show="{{ playing.post_meta.client }}" class="gamma soft-half--right">Client</span> 
+			<span ng-bind-html="playing.post_meta.client"></span>
 		</li>
 	</ul>
 </div>
