--- a/app/themes/commongood/views/video.html
+++ b/app/themes/commongood/views/video.html
@@ -1,7 +1,7 @@
 
 <div class="row">
 	<div class="grid">
-		<vimeo-video video="video"></vimeo-video>
+		<vimeo-video playing="video" player="player"></vimeo-video>
 	</div>	
 </div>
 
