--- a/app/themes/commongood/views/main.html
+++ b/app/themes/commongood/views/main.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="grid">s
+	<div class="grid">
 		<vimeo-video playing="active" player="player"></vimeo-video>
 	</div>	
 </div>
