--- a/app/themes/commongood/views/videos.html
+++ b/app/themes/commongood/views/videos.html
@@ -1,13 +1,13 @@
 <div class="row">
 	<div class="grid">
-		<vimeo-video playing="active" player="player"></vimeo-video>
+		<vimeo-video playing="playing"></vimeo-video>
 	</div>	
 </div>
 
 <div class="row">
 	<div class="grid">
-		<div ng-repeat="video in videos " class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item" ng-animate=" " >
-			<a class="work-block" href="/video/{{video.ID}}">
+		<div ng-repeat="video in videos " class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item" >
+			<a class="work-block" ng-click="playVideo(video)">
 				<img ng-src="{{video.featured_image.attachment_meta.sizes.medium.url}}" />
 				<h4 class="work-block__text" ng-bind-html="video.title"></h4>
 			</a>
