added contact and studio pages
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -7,15 +7,15 @@
 			<span class="gamma" >{{playing.title}}</span>
 		</div><!--
 		--><div class="grid__item one-quarter palm-one-half">
-			<span ng-show="{{ playing.post_meta.agency }}" class="gamma soft-half--right">Agency</span> 
+			<span  class="gamma soft-half--right">Agency</span> 
 			<span ng-bind-html="playing.post_meta.agency"></span>
 		</div><!--
 		--><div class="grid__item one-quarter palm-one-half">
-			<span ng-show="{{ playing.post_meta.director }}" class="gamma soft-half--right">Director</span> 
+			<span  class="gamma soft-half--right">Director</span> 
 			<span ng-bind-html="playing.post_meta.director"></span>
 		</div><!--
 		--><div class="grid__item one-quarter palm-one-half">
-			<span ng-show="{{ playing.post_meta.client }}" class="gamma soft-half--right">Client</span> 
+			<span  class="gamma soft-half--right">Client</span> 
 			<span ng-bind-html="playing.post_meta.client"></span>
 		</div>
 	</div>
