added contact page
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/commongood/views/studio.html
+++ b/app/themes/commongood/views/studio.html
@@ -1,6 +1,9 @@
 <div class="row">
 	<div class="grid">
-		<div class="palm-one-whole lap-one-whole desk-two-thirds soft--bottom grid__item">
+		<div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+			<img src="http://www.commongood.tv/wp-content/uploads/CG_studio_goodSM.jpg" />
+		</div><!--
+		--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
 			<p>With a focus on visually driven stories, Common Good is a directing collective backed by a full service design, animation and VFX studio. Common Good launched in the autumn of 2010 with the mandate of telling stories driven by the kind of stunning imagery that has been the hallmark of their work. With the skills to take an idea from concept to completion, they are able to solve the most complicated problems in beautiful and unexpected ways. Common Good is represented in Canada as a directorial collective by Radke.</p>
 		</div>	
 	</div>
