--- a/app/themes/commongood/scss/commongood/_footer.scss
+++ b/app/themes/commongood/scss/commongood/_footer.scss
@@ -21,7 +21,7 @@
 		height:7px;
 		width:54px;
 		text-indent:-9999px;
-		margin:8px 0px 0;
+		margin:8px 0px 0 0;
 		display:block;
 		border:none;
 	}
