--- a/app/themes/commongood/views/contact.html
+++ b/app/themes/commongood/views/contact.html
@@ -1,9 +1,10 @@
 <div class="row">
 	<div class="grid">
-		<div class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item">
-			<ul>
-				<li></li>
-			</ul>
+		<div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+			<img src="http://www.commongood.tv/wp-content/uploads/mapNEW.jpg" />
+		</div><!--
+		--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+			<p></p>
 		</div>	
 	</div>
 </div>
