--- a/app/themes/commongood/views/contact.html
+++ b/app/themes/commongood/views/contact.html
@@ -3,8 +3,24 @@
 		<div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
 			<img src="http://www.commongood.tv/wp-content/uploads/mapNEW.jpg" />
 		</div><!--
-		--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
-			<p></p>
-		</div>	
+	--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+			<h3>Address</h3>    
+			<ul class="nav nav--stacked">
+				<li>837 Dundas Street West</li>
+				<li>Toronto, ON    M6J 1V4</li>
+				<li>+1 416 366 2552</li>
+			</ul>
+		</div><!--
+	--><div class="visuallyhidden palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+			<h3>Contact</h3>
+			<ul class="nav nav--stacked">
+				<li>Stefani Kouverianos</li>
+				<li>executive producer</li>
+				<li><a href="mailto:stefani@commongood.tv">stefani@commongood.tv</a></li>
+				<li><span class="contact-label">tel</span>+1 416 366 2552</li>
+				<li><span class="contact-label">cel</span>+1 416 457 1936</li>
+				<li><span class="contact-label">ichat</span>sharpknife@mac.com</li>
+			</ul>
+		</div>
 	</div>
 </div>
