--- a/app/themes/commongood/scss/commongood/_navs.scss
+++ b/app/themes/commongood/scss/commongood/_navs.scss
@@ -1,6 +1,15 @@
 .nav {
 
 }
+
+.nav--stacked {
+	li {
+		display:block;
+		a {
+			display:inline;
+		}
+	}
+}
 	
 	
 .nav--global {
@@ -30,12 +39,13 @@
 				@include transition(all .2s);
 				@include transform(translate(0, -3px));
 			}
-			&:hover:after {	
+			&:hover:after, &.active:after {	
 				opacity:1;
 				height:2px;
 				@include transition(all .2s);	
 				@include transform(translate(0%, 0));
 			}
+			
 		}
 	}
 	@include media-query(palm) {
