--- a/app/themes/commongood/views/contact.html
+++ b/app/themes/commongood/views/contact.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="grid">
-		<div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+		<div class="one-whole soft--bottom grid__item">
 			<img src="http://www.commongood.tv/wp-content/uploads/mapNEW.jpg" />
 		</div><!--
 	--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
@@ -11,7 +11,7 @@
 				<li>+1 416 366 2552</li>
 			</ul>
 		</div><!--
-	--><div class="visuallyhidden palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+	--><div class=" palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
 			<h3>Contact</h3>
 			<ul class="nav nav--stacked">
 				<li>Stefani Kouverianos</li>
