--- a/app/themes/commongood/views/studio.html
+++ b/app/themes/commongood/views/studio.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="grid">
-		<div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
+		<div class="one-whole soft--bottom grid__item">
 			<img src="http://www.commongood.tv/wp-content/uploads/CG_studio_goodSM.jpg" />
 		</div><!--
 		--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
