--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="soft--top grid video__meta">
 		<div class="grid__item one-quarter palm-one-half">
-			<span class="gamma" >{{playing.title}}</span>
+			<h3  >{{playing.title}}</h3>
 		</div><!--
 		--><div class="grid__item one-quarter palm-one-half">
 			<span  class="gamma soft-half--right">Agency</span> 
