--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -1,4 +1,4 @@
-<div class="video one-whole soft--bottom  grid__item " >
+<div class="video one-whole   grid__item " >
 	<div class="flex-video widescreen vimeo video__player">
 		<iframe src="{{player}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</div>
