--- a/app/themes/commongood/scss/commongood/_animations.scss
+++ b/app/themes/commongood/scss/commongood/_animations.scss
@@ -1,21 +1,29 @@
+.view-wrap {
+	position:relative;
+}
 
 .ng-enter, 
 .ng-leave
-{ 
-  @include transition(300ms ease-in all);
-} 
+{
+	@include transition(200ms ease-in all);
+	position:absolute;
+	width:100%;
+	height:100%;
+	top:0px;
+
+}
 
 .ng-leave {
-  opacity:1;
+	opacity:1;
 }
 
 .ng-leave.ng-leave-active {
-  opacity:0;
+	opacity:0;
 }
 
 .ng-enter {
-  opacity:0;
+	opacity:0;
 }
 .ng-enter.ng-enter-active{
-  opacity: 1;
+	opacity: 1;
 }
