--- a/app/themes/commongood/scss/commongood/_footer.scss
+++ b/app/themes/commongood/scss/commongood/_footer.scss
@@ -3,7 +3,14 @@
 \*------------------------------------*/
 
 .footer {
+	position:fixed;
+	left:50%;
+	@include transform(translateX(-50%));
+	bottom:0;
+}
 
+body {
+	padding-bottom:100px;
 }
 
 /* Footer
