--- a/app/themes/commongood/views/directive-vimeo-video.html
+++ b/app/themes/commongood/views/directive-vimeo-video.html
@@ -1,10 +1,10 @@
-<div class="video one-whole   grid__item " >
+<div class="video one-whole grid__item " >
 	<div class="flex-video widescreen vimeo video__player">
 		<iframe src="{{player}}" width="100%" height="360px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</div>
-	<div class="soft--top grid video__meta">
+	<div class="soft--top soft--bottom grid video__meta">
 		<div class="grid__item one-quarter palm-one-half">
-			<h3  >{{playing.title}}</h3>
+			<h3 class="flush--bottom" ng-bind-html="playing.title" ></h3>
 		</div><!--
 		--><div class="grid__item one-quarter palm-one-half">
 			<span  class="gamma soft-half--right">Agency</span> 
