--- a/app/themes/commongood/scss/style.scss
+++ b/app/themes/commongood/scss/style.scss
@@ -65,6 +65,7 @@ Version: 1.0
 @import "commongood/images";
 @import "commongood/forms";
 @import "commongood/animations";
+@import "commongood/spinner";
 
 /**
  * Theme Parts
