--- a/app/themes/commongood/views/main.html
+++ b/app/themes/commongood/views/main.html
@@ -1,13 +1,13 @@
 <div class="row">
 	<div class="grid">
-		<div class="loader text--center soft--ends" ng-hide="ready">Loading</div>
+		<div class="spinner" ng-hide="ready"></div>
 		<vimeo-video playing="playing"></vimeo-video>
 	</div>
 </div>
 <div class="row">
 	<div class="grid">
 		<div ng-repeat="video in videos " class="palm-one-half lap-one-third desk-one-quarter soft--bottom grid__item" >
-			<a class="work-block" scroll-on-click ng-href="/?v={{$index}}" ng-click="playVideo(video)">
+			<a class="work-block" scroll-on-click ng-href="/?v={{video.slug}}" ng-click="playVideo(video)">
 				<img ng-src="{{video.featured_image.attachment_meta.sizes.medium.url}}" />
 				<h4 class="work-block__text" ng-bind-html="video.title"></h4>
 			</a>
