added auto play
Signed-off-by: Matthew Seccafien <matt@studiocartogram.com>

--- a/app/themes/commongood/scss/commongood/_shame.scss
+++ b/app/themes/commongood/scss/commongood/_shame.scss
@@ -1,7 +1,7 @@
 .work-block {
 	position:relative;
 	display:block;
-	&:hover .work-block__text {
+	&:hover .work-block__text, &.active .work-block__text{
 		@include transition(opacity 0.2s ease);
 		@include opacity(1);
 	}
