--- a/app/themes/commongood/scss/commongood/_animations.scss
+++ b/app/themes/commongood/scss/commongood/_animations.scss
@@ -2,28 +2,23 @@
 	position:relative;
 }
 
-.ng-enter, 
 .ng-leave
 {
-	@include transition(200ms ease-in all);
-	position:absolute;
-	width:100%;
-	height:100%;
-	top:0px;
-
+  opacity:1;
+	@include transition(all 200ms ease-in );
+  
 }
-
-.ng-leave {
-	opacity:1;
+.ng-enter
+{
+  opacity:0;
+  @include transition(all 200ms ease-in 200ms);
+  
 }
 
 .ng-leave.ng-leave-active {
 	opacity:0;
 }
 
-.ng-enter {
-	opacity:0;
-}
 .ng-enter.ng-enter-active{
 	opacity: 1;
 }
