--- a/app/themes/commongood/scss/commongood/_footer.scss
+++ b/app/themes/commongood/scss/commongood/_footer.scss
@@ -2,15 +2,9 @@
     $FOOTER
 \*------------------------------------*/
 
-.footer {
-	position:fixed;
-	left:50%;
-	@include transform(translateX(-50%));
-	bottom:0;
-}
 
 body {
-	padding-bottom:100px;
+	padding-bottom:$base-spacing-unit * 2;
 }
 
 /* Footer
