--- a/app/themes/commongood/views/contact.html
+++ b/app/themes/commongood/views/contact.html
@@ -1,25 +1,34 @@
 <div class="row">
 	<div class="grid">
 		<div class="one-whole soft--bottom grid__item">
-			<img src="http://www.commongood.tv/wp-content/uploads/mapNEW1.jpg" />
+			<img src="/app/themes/commongood/dist/images/map.jpg" />
 		</div><!--
+	-->
+	<div class=" palm-one-whole lap-and-up-one-half soft--bottom grid__item">
+		<h3 class="flush--bottom">Contact</h3>
+		<ul class="flush--bottom multi-list two-cols contact soft-half--top">
+			<li>Stefani Kouverianos</li>
+			<li><span class="contact__label">tel</span><span class="contact__value">+1 416 366 2552</span></li>
+			<li><em>executive producer</em></li>
+			<li><span class="contact__label">cel</span><span class="contact__value">+1 416 457 1936</span></li>
+			<li><a  class="link--secondary" href="mailto:stefani@commongood.tv">stefani@commongood.tv</a></li>			
+			<li><span class="contact__label">ichat</span><span class="contact__value">sharpknife@mac.com</span></li>					
+		</ul>
+		<ul class="multi-list two-cols contact soft-half--top">
+			<li>Marie-Pierre Touré</li>
+			<li><span class="contact__label">tel</span><span class="contact__value">+1 416 366 2552</span></li>
+			<li><em>executive producer</em></li>
+			<li><span class="contact__label">cel</span><span class="contact__value">+1 416 930 3163</span></li>
+			<li><a class="link--secondary" href="mailto:stefani@commongood.tv">stefani@commongood.tv</a></li>			
+			<li><span class="contact__label">ichat</span><span class="contact__value">mptoure@mac.com</span></li>					
+		</ul>
+	</div><!--
 	--><div class="palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
-			<h3>Address</h3>    
-			<ul class="nav nav--stacked">
+			<h3 class="flush--bottom">Address</h3>    
+			<ul class="flush--bottom  nav nav--stacked contact soft-half--top">
 				<li>837 Dundas Street West</li>
 				<li>Toronto, ON    M6J 1V4</li>
 				<li>+1 416 366 2552</li>
-			</ul>
-		</div><!--
-	--><div class=" palm-one-whole lap-one-whole desk-one-half soft--bottom grid__item">
-			<h3>Contact</h3>
-			<ul class="nav nav--stacked">
-				<li>Stefani Kouverianos</li>
-				<li>executive producer</li>
-				<li><a href="mailto:stefani@commongood.tv">stefani@commongood.tv</a></li>
-				<li><span class="contact-label">tel</span>+1 416 366 2552</li>
-				<li><span class="contact-label">cel</span>+1 416 457 1936</li>
-				<li><span class="contact-label">ichat</span>sharpknife@mac.com</li>
 			</ul>
 		</div>
 	</div>
