--- a/app/themes/commongood/scss/commongood/_type.scss
+++ b/app/themes/commongood/scss/commongood/_type.scss
@@ -50,3 +50,22 @@ em, i {
 		display:inline-block;
 	}
 }
+
+
+.contact {
+	line-height:1.35;
+	.contact__label {
+		display:inline-block;
+		border-right:1px solid;
+		text-align: right;
+		width:20%;
+		padding-right:5px;
+
+
+	}
+	.contact__value {
+		padding-left:5px;
+		display:inline-block;
+		width:80%;
+	}
+}
